--- a/css/style.css
+++ b/css/style.css
@@ -19,22 +19,32 @@ body {
 }
 
 header {
-  padding: 0.25rem 1.5rem 0.25rem 0.75rem;
+  align-items: center;
+  max-width: 100%;
+  padding-right: 24px;
+  padding-left: 24px;
 }
 
 header h4.logo {
   font-family: Poppins, sans-serif;
-  font-size: 1.125rem;
+  font-size: 20px;
   font-style: normal;
-  line-height: 1.25rem;
+  line-height: 20px;
+}
+
+header h4 a {
+  text-decoration: none;
   color: #6070ff;
 }
 
 .logo-menubar {
   display: flex;
   align-items: flex-start;
-  gap: 12.438rem;
-  padding: 0.25rem 1.5rem 0.25rem 0.75rem;
+  gap: 199px;
+}
+
+section.logo-menubar {
+  padding-right: 0;
 }
 
 .presentation-part {
@@ -43,94 +53,96 @@ header h4.logo {
   background-repeat: no-repeat;
   background-size: cover;
   padding: 114px 24px;
+  width: 100%;
+  height: 81%;
+  display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: flex-start;
-  gap: 0.75rem;
+  gap: 12px;
 }
 
 .presentation-part h1 {
   display: flex;
-  width: 20.438rem;
-  height: 9.375rem;
+  width: 80%;
   flex-direction: column;
   justify-content: center;
-  padding: 0.25rem 1.5rem 0.25rem 0.75rem;
+  padding: 4px 24px 4px 12px;
   font-family: Poppins-black, sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
-  line-height: 3.25rem;
+  line-height: 52px;
   color: #172b4d;
-  margin-bottom: 0.75rem;
+  margin-bottom: 12px;
 }
 
 p.presentation-paragraph {
   display: flex;
-  padding: 0.25rem 1.5rem 0.25rem 0.75rem;
+  padding: 4px 24px 4px 12px;
   flex-direction: column;
   font-family: Poppins, sans-serif;
-  font-size: 1rem;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.5rem;
+  line-height: 24px;
   color: #344563;
-  margin-bottom: 0.75rem;
 }
 
 p.socialtext-part {
-  margin-top: 0.75rem;
   color: #7f8cff;
   font-family: Poppins, sans-serif;
-  font-size: 1rem;
-  font-size: normal;
+  font-size: 16px;
+  font-style: normal;
   font-weight: 500;
-  line-height: 1.5rem;
-  padding: 0.25rem 1.5rem 0.25rem 0.75rem;
-  margin-bottom: 0.75rem;
+  line-height: 24px;
+  padding-left: 12px;
+  padding-bottom: 4px;
+  margin-bottom: 12px;
 }
 
-.socialnetwork-part img {
-  padding: 0.25rem 1.5rem 0.25rem 0.75rem;
+.socialnetwork-part ul.socialnetwork-icon {
+  display: flex;
+}
+
+ul.socialnetwork-icon li {
+  padding-left: 12px;
+  justify-content: space-around;
+  list-style: none;
+}
+
+section.works {
+  background-color: #f7f7f9;
 }
 
 @media screen and (min-width: 375px) {
-  header {
-    margin: 1.5rem 1.5rem;
-    display: flex;
-    align-items: flex-start;
-    padding: 0.25rem 1.5rem 0.25rem 0.75rem;
-  }
-
   header h4.logo {
     font-family: Poppins-regular, sans-serif;
-    font-size: 1.125rem;
+    font-size: 18px;
     font-style: normal;
     font-weight: 700;
-    line-height: 1.25rem;
+    line-height: 20px;
     color: #6070ff;
     flex-shrink: 0;
   }
 
   .logo-menubar {
     display: flex;
-    justify-content: space-evenly;
-    gap: 12.438rem;
-    padding: 0.5rem;
+    justify-content: space-between;
+    gap: 199px;
+    margin-top: 7%;
   }
 
   .presentation-part h1 {
     display: flex;
-    width: 20.438rem;
-    height: 9.375rem;
     flex-direction: column;
     justify-content: center;
-    padding: 0.25rem 2.5rem 0.25rem 0.75rem;
     font-family: Poppins-black, sans-serif;
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
-    line-height: 3.25rem;
+    line-height: 52px;
     color: #172b4d;
-    margin-bottom: 0.75rem;
+    margin-bottom: 12px;
   }
 }
