--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,18 @@
 }
 
 @font-face {
-  font-family: Poppins;
+  font-family: 'Poppins';
   src: url(../fonts/Poppins/Poppins-Regular.ttf);
 }
 
 @font-face {
-  font-family: Poppins-Medium;
+  font-family: 'Poppins-Medium';
   src: url(../fonts/Poppins/Poppins-Medium.ttf);
 }
-
+@font-face{
+  font-family: 'Poppins-Thin';
+  src: url(../fonts/Poppins/Poppins-Light.ttf);
+}
 body {
   background-color: #f7f7f9;
 }
@@ -112,9 +115,150 @@ ul.socialnetwork-icon li {
 }
 
 section.works {
-  background-color: #f7f7f9;
+  background-color: #ffff;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(1fr);
+  width: 100%;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 114px;
+}
+.card-works{
+  width: 100%;
+  flex-direction: column;
+  display: inline-flex;
+  justify-content: center;
+  padding: 16px;
+  border-radius: 16px;
+  border: 1px solid #dfe1e6;
+  background-color: #ffff;
+  margin-bottom: 88px;
+}
+figure img{
+  padding-bottom: 12px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 12px;
+}
+ h2.primary-text{
+ font-family: Poppins-Regular, sans-serif;
+ font-size: 32px;
+ font-style: normal;
+ font-weight: 700;
+ line-height: 44px;
+ color: #172b4d;
+}
+.list-card-primary{
+  margin-bottom: 12px;
+}
+.list-card-primary ul {
+  display: flex;
+}
+.list-card-primary ul li{
+  list-style: none;
+}
+.list-card-primary li a{
+  text-decoration: none; 
+  padding-right: 12px;
+  color: #344563;
+}
+.card-br{
+  margin-top: 12px;
+}
+a.back{
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 16px;
+  color: #7a869a;
+}
+a.back img{
+  padding-right: 16px;
+}
+a.year{
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 16px;
+  color: #7a869a;
+}
+a.year img{
+  padding-right: 16px;
+}
+a.canopy{
+  font-size: 13px;
+  font-family: Poppins-Regular, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 16px;
+  padding-right: 12px;
+}
+p.work-text{
+  font-family: Poppins-Thin,sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: #344563;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 12px;
 }
 
+.buttons-group ul{
+display: flex;
+}
+.buttons-group ul li{
+  list-style: none;
+  padding-right: 20px;
+}
+ul.buttons li button a {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0.36px;
+  color: #6070ff;
+  text-decoration: none;
+  font-family: Poppins;
+  padding: 4px 12px;
+}
+.button-bg{
+  background-color: #ebebff;
+  border: 1px solid #ebebff;
+  border-radius: 8px;
+  margin-bottom: 24px;
+}
+.normal-button{
+  display: flex;
+  align-items: center;
+  margin-top: 12px;
+  padding-bottom: 12px;
+  width: 126px;
+  height: 48px;
+}
+.normal-btn{
+  border: none;
+}
+.normal-button button a{
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+  padding: 12px;
+}
+button.normal-btn a{
+  text-decoration: none;
+  color: #396DF2;
+  background: #ffff;
+  font-family: Poppins-Regular, sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: 0.51px;
+}
 @media screen and (min-width: 375px) {
   header h4.logo {
     font-family: Poppins-regular, sans-serif;
@@ -122,7 +266,7 @@ section.works {
     font-style: normal;
     font-weight: 700;
     line-height: 20px;
-    color: #6070ff;
+    color: #396df2;
     flex-shrink: 0;
   }
 
