--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,20 @@ p.socialtext-part {
   display: flex;
 }
 
+.languages-icon li {
+  display: flex;
+  align-items: center;
+  width: 298px;
+  height: 48px;
+  background-color: #f7f7f9;
+  padding-top: 9px;
+  padding-bottom: 9.72px;
+  padding-right: 12px;
+  padding-left: 12px;
+  margin-bottom: 12px;
+  border-radius: 8px;
+}
+
 ul.socialnetwork-icon li {
   padding-left: 12px;
   justify-content: space-around;
@@ -117,7 +131,7 @@ ul.socialnetwork-icon li {
 }
 
 section.works {
-  background-color: #ffff;
+  background-color: #f7f7f9;
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   grid-template-columns: repeat(1fr);
@@ -243,6 +257,14 @@ button.normal-btn a {
   font-weight: 500;
   font-size: 15px;
   letter-spacing: 0.51px;
+  border-radius: 8px;
+  border: 1px solid #396df2;
+  padding: 12px;
+  cursor: pointer;
+}
+
+ul.languages-icon li a {
+  text-decoration: none;
 }
 
 ul.buttons li button a {
@@ -257,11 +279,18 @@ ul.buttons li button a {
   padding: 4px 12px;
 }
 
+button.normal-btn a:hover {
+  background-color: deeppink;
+  color: white;
+  border: 1px solid deeppink;
+}
+
 .button-bg {
   background-color: #ebebff;
   border: 1px solid #ebebff;
   border-radius: 8px;
   margin-bottom: 24px;
+  cursor: pointer;
 }
 
 .normal-button {
@@ -282,8 +311,117 @@ ul.buttons li button a {
   border-radius: 8px;
   padding: 12px;
 }
-.last-card{
-  margin-bottom: 144px;
+
+.resume-btn {
+  display: flex;
+  align-items: center;
+  margin-top: 12px;
+  padding-bottom: 24px;
+  width: 138px;
+  height: 24px;
+}
+
+.about-myself {
+  padding-bottom: 114px;
+  background-color: #ffff;
+  display: inline-flex;
+  flex-direction: column;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 114px;
+  width: 100%;
+}
+
+h2.about-me {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  padding: 4px 24px 4px 12px;
+  font-family: Poppins-black, sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 52px;
+  color: #172b4d;
+  margin-bottom: 12px;
+}
+
+ul.socialnetwork-icon.about-me-part {
+  padding-bottom: 12px;
+}
+
+p.socialtext-part.about-me-part {
+  padding-top: 12px;
+  padding-bottom: 16px;
+}
+
+ul.socialnetwork-icon.about-me-part li {
+  padding-left: 10px;
+  padding-right: 16px;
+  padding-bottom: 16px;
+}
+
+.lang-chv h4 {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  font-family: Poppins, sans-serif;
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  padding-right: 170px;
+}
+
+.title-icon-me-part {
+  display: flex;
+}
+
+.chev-open {
+  padding-right: 26px;
+  margin-right: 24px;
+}
+
+.languages-icon {
+  list-style: none;
+}
+
+ul.languages-icon li a p.lang {
+  padding-left: 16px;
+  font-family: Poppins, sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  color: #253858;
+  flex-shrink: 0;
+}
+
+.fram-chv h4 {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  font-family: Poppins, sans-serif;
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  padding-right: 170px;
+  border-bottom: 1px solid #dfe1e6;
+}
+
+.skills-chv h4 {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  font-family: Poppins, sans-serif;
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  padding-right: 240px;
+  border-bottom: 1px solid #dfe1e6;
 }
 
 @media screen and (min-width: 375px) {
