--- a/css/style.css
+++ b/css/style.css
@@ -449,34 +449,37 @@ h3.lang-1 {
   right: 80px;
 }
 
-.contact-form{
+.contact-form {
   text-align: center;
   border-top-left-radius: 80px 80px;
   padding: 103px 24px 45px;
   background: #6070ff no-repeat right/60%  url(../img/contact-form-shapes/contact\ form\ shapes-mobile@2x.png);
   flex-shrink: 0;
 }
-.contact-form h2{
-font-family: Poppins,sans-serif;
-font-size: 40px;
-font-style: normal;
-font-weight: 700;
-line-height: 52px;
-color: #fff;
-padding-bottom: 12px;
+
+.contact-form h2 {
+  font-family: Poppins, sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 52px;
+  color: #fff;
+  padding-bottom: 12px;
 }
-.contact-form .contact-paragraph{
-text-align: center;
-font-family: Poppins-Thin, sans-serif;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 28px;
-color: #ebebff;
-padding-left: 24px;
-padding-right: 24px;
-padding-bottom: 52px;
+
+.contact-form .contact-paragraph {
+  text-align: center;
+  font-family: Poppins-Thin, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  color: #ebebff;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 52px;
 }
+
 .form {
   display: flex;
   flex-direction: column;
@@ -484,20 +487,20 @@ padding-bottom: 52px;
 }
 
 .input {
-  border: 0px;
+  border: 0;
   padding: 5%;
   border-radius: 12px;
   font-family: Poppins, sans-serif;
- font-size: 17px;
- font-style: normal;
- font-weight: 400;
- line-height: 20px;
- color: #172b4d;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  color: #172b4d;
 }
-.input-text{
+
+.input-text {
   border: 1px solid #cfd8dc;
   padding: 5%;
-  width: 327px;
   height: 170px;
   flex-shrink: 0;
   border-radius: 8px;
@@ -506,7 +509,8 @@ padding-bottom: 52px;
   padding-bottom: 22px;
   width: 100%;
 }
-.button-contact-form{
+
+.button-contact-form {
   display: inline-flex;
   align-items: center;
   margin-top: 12px 16px;
@@ -520,18 +524,20 @@ padding-bottom: 52px;
   color: #6070ff;
   font-size: 17px;
   font-family: Poppins, sans-serif;
- font-style: normal;
- font-weight: 500;
- line-height: 24px;
- letter-spacing: 0.51px;
- padding-bottom: 45px;
- cursor: pointer;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.51px;
+  padding-bottom: 45px;
+  cursor: pointer;
 }
-.button-contact-form:hover{
+
+.button-contact-form:hover {
   background-color: salmon;
   color: white;
   border: 1px solid salmon;
 }
+
 @media screen and (min-width: 375px) {
   header h4.logo {
     font-family: Poppins-regular, sans-serif;
