--- a/css/style.css
+++ b/css/style.css
@@ -149,8 +149,8 @@ ul.socialnetwork-icon li {
 section.works {
   background-color: #f7f7f9;
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: repeat(1fr);
+ /* grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(1fr); */
   width: 100%;
   padding-left: 24px;
   padding-right: 24px;
@@ -160,7 +160,7 @@ section.works {
 .card-works {
   width: 100%;
   flex-direction: column;
-  display: inline-flex;
+ 
   justify-content: center;
   padding: 16px;
   border-radius: 16px;
@@ -555,6 +555,9 @@ h3.lang-1 {
     gap: 199px;
     margin-top: 7%;
   }
+  .nav-items{
+    display: none;
+  }
 
   .presentation-part h1 {
     display: flex;
@@ -568,4 +571,395 @@ h3.lang-1 {
     color: #172b4d;
     margin-bottom: 12px;
   }
+  .mobile-snapshoot-6{
+    display: none;
+  }
+  .mobile-snapshoot-5{
+    display: none;
+  }
+  .mobile-snapshoot-4{
+    display: none;
+  }
+  a.facebook.facebook-2{
+    display: none;
+  }
+  a.back.back-desktop.back-desktop-2{
+    display: none;
+  }
+  p.work-text-2{
+    font-family: Poppins-Thin, sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    line-height: 24px;
+    color: #344563;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 12px;
+  }
+  p.work-text-desktop{
+    display: none;
+  }
+  .btn-ruby{
+    display: none;
+  }
+  .buttons-group ul li{
+    padding-right: 8px;
+  }
+
+.desktop-snapshoot-1-3{
+  display: none;
+}
+.desktop-snapshoot-2{
+  display: none;
+}
+h2.desktop-text{
+  display: none;
+}
+a.facebook-desktop{
+  display: none;
+}
+a.back.back-desktop{
+  display: none;
+}
+p.work-text-3{
+  font-family: Poppins-Thin, sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  line-height: 24px;
+  color: #344563;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 12px;
+}
+.snp-4{
+  display: block;
+}
+a.canopy.uber{
+  display: none;
+}
+.back-lead{
+  display: none;
+}
+.year-more{
+  display: none;
+}
+p.work-text-4{
+  font-family: Poppins-Thin,sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  line-height: 24px;
+  color: #344563;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 12px;
+}
+}
+@media screen and (min-width: 768px){
+ header{
+  padding: 16px 143px;
+  background-color: #fff;
+ }
+  .hamb-icon{
+  display: none;
+ }
+ ul.nav-items{
+   display: flex;
+   align-items: flex-start;
+ }
+ ul.nav-items li a{
+  text-decoration: none;
+  padding: 10px 12px;
+  align-items: center;
+  gap: 10px;
+  font-family: Poppins-Regular, sans-serif;
+  font-size: 15px;
+  font-style: normal;
+ font-weight: 500;
+ line-height: 20px;
+ color: #344563;
+ }
+ .desktop-version{
+  padding-top: 289px;
+  padding-right: 20%;
+  padding-left:  20%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  gap: 12px;
+ background: #fff no-repeat right/87% 98% url(../img/header-bg@2x.png);
+ border-bottom-left-radius: 80px 80px;
+ }
+ .presentation-part h1{
+  width: 100%;
+  letter-spacing: 0.37px;
+  flex-direction: column;
+  justify-content: center;
+  font-family: Poppins-Regular, sans-serif;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px; 
+  color: #091e42;
+  padding-right: 0;
+  padding-left: 0;
+ }
+ p.presentation-paragraph{
+  font-family: Poppins;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px;
+padding-right: 0;
+padding-left: 0;
+ }
+p.socialtext-part{
+  padding-left: 1px;
+}
+ section.works{
+  padding-right: 7%;
+  padding-left: 7%;
+ }
+  .card-works{
+  display: grid;
+ grid-template-columns: 50% 50%;
+ border-radius: 8px;
+ justify-content: center;
+ padding: 24px;
+ align-items: center;
+ gap: 22px;
+ }
+ figure.desktop img{
+  padding-top: 24px;
+    padding-left: 24px;
+    padding-bottom: 24px;
+    padding-right: 22px;
+    flex-shrink: 0;
+    width: 100%;
+    height: auto;
+    }
+.left-block{
+  flex-direction: column;
+  display: flex;
+}
+.left-block-desktop{
+  display: flex;
+  flex-direction: column;
+  padding-left: 24px;
+}
+.change{
+  order: -1;
+}
+h2.primary-text{
+  width: 100%;
+}
+div.left-block.left-block-desktop.change br{
+  display: none;
+}
+.normal-button button.normal-btn.normal-btn-desktop a{
+background-color: #4053fc;
+color: #fff;
+}
+img.desktop-snapshoot-1{
+width: 100%;
+}
+.desktop-snapshoot-5{
+  display: block;
+}
+.desktop-snapshoot-1{
+  display:none;
+}
+.desktop-snapshoot-4-2{
+  display: block;
+}
+.desktop-snapshoot-2{
+  display: none;
+}
+.desktop-snapshoot-1-3{
+  display: block;
+}
+.desktop-snapshoot-3{
+  display: none;
+}
+.desktop-snapshoot-2{
+  display: block;
+}
+.desktop-snapshoot-4{
+  display: none;
+}
+.desktop-snapshoot-2-1{
+  display: none;
+}
+.desktop-snapshoot-2{
+  display: block;
+}
+.snp-2{
+  display:block;
+}
+h2.tonic-desktop{
+  display: none;
+}
+h2.desktop-text{
+  font-family: Poppins-Regular, sans-serif;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 44px;
+  color: #172b4d;
+  padding-bottom: 12px;
+  display: block;
+}
+h2.multi-desktop{
+  display: none;
+}
+.canopy{
+  display: none;
+}
+.canopy-card-1{
+  display: block;
+  font-family: Poppins;
+font-size: 18px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px;
+color: #344563;
+}
+
+.back-mobile{
+  display: none;
+}
+p.work-text-2{
+  display: none;
+}
+p.work-text-desktop-2{
+font-family: Poppins-Thin, sans-serif;
+font-size: 15px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px;
+color: #344563;
+display: flex;
+flex-direction: column;
+padding-right: 24px;
+padding-bottom: 24px;
+}
+a.facebook.facebook-2{
+  display: block;
+}
+a.back.back-desktop.back-desktop-2{
+  display: block;
+}
+.list-card-primary li a{
+  padding-right: 10px;
+}
+ul.buttons li button a{
+  padding: 4px 2px;
+}
+.buttons-group ul li{
+  padding-right: 10px;
+}
+.back-backend{
+  display: none;
+}
+.work-text-3{
+  display: none;
+}
+.btn-ruby{
+  display: block;
+}
+a.facebook-desktop{
+  display: block;
+}
+a.back.back-desktop{
+  display: block;
+}
+.uber{
+  display: block;
+}
+.year-before{
+  display: none;
+}
+a.year-more img{
+  padding-right: 16px;
+}
+p.work-text-4{
+  display: none;
+}
+a.canoy.uber{
+  display: block;
+}
+.backend-dev{
+  display: none;
+}
+.back-lead{
+  display: block;
+}
+.year-more{
+  display: block;
+}
+p.work-text-desktop.uber-text{
+  display: block;
+  font-family: Poppins-Thin, sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  line-height: 24px;
+  color: #344563;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 12px;
+}
+.about-myself{
+ display: grid;
+ grid-template-columns: 50% 50%;
+ justify-content: center;
+ padding-top: 142px;
+ padding-left: 100px;
+ padding-right: 100px;
+ margin-top: 142px;
+ align-items: flex-start;
+ gap: 37px;
+ border-top-right-radius: 95px 95px;
+}
+.lists{
+  align-items: center;
+}
+h2.about-me{
+  flex-direction: row;
+  padding: 0;
+}
+.develop-lang{
+  display: flex;
+}
+ul.develop-lang li{
+  display: block;
+}
+h2.contact-me{
+padding-top: 142px;
+padding-bottom: 20px;
+}
+.last-card{
+  padding-bottom: 142px;
+  margin-bottom: 0;
+}
+.contact-form{
+  padding-top: 0;
+  background: #6070ff no-repeat right/100% 80%  url(../img/contact\ form\ background\ shapes@2x.png);
+}
+.contact-form .contact-paragraph{
+  padding-left: 25%;
+  padding-right: 25%;
+}
+form.form{
+  padding-right: 25%;
+  padding-left: 25%;
+  gap: 27px;
+  justify-content: center;
+  align-items: center;
+}
+.input{
+  width: 100%;
+}
+input.button-contact-form{
+  margin-right: 0px;
+}
 }
