Style: add animations to stylesheet

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ section.logo-menubar {
   flex-direction: column;
   align-items: flex-start;
   gap: 12px;
+  overflow: hidden;
 }
 
 .presentation-part h1 {
@@ -90,6 +91,20 @@ section.logo-menubar {
   line-height: 52px;
   color: #172b4d;
   margin-bottom: 12px;
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
 
 p.presentation-paragraph {
@@ -822,6 +837,10 @@ h3.lang-1 {
 
   .desktop-snapshoot-5 {
     display: block;
+    transition: width 2s, height 2s, background-color 2s, rotate 2s;
+  }
+  .desktop-snapshoot-5:hover{
+    rotate: 180deg;
   }
 
   .desktop-snapshoot-1 {
@@ -838,6 +857,10 @@ h3.lang-1 {
 
   .desktop-snapshoot-1-3 {
     display: block;
+    transition: width 2s, height 2s, background-color 2s, rotate 2s;
+  }
+  .desktop-snapshoot-1-3:hover{
+    rotate: 180deg;
   }
 
   .desktop-snapshoot-3 {
