--- a/css/style.css
+++ b/css/style.css
@@ -1164,6 +1164,14 @@ ul.project__lang {
     flex-direction: column;
     display: flex;
   }
+button.modal-btn.external a.externalLink{
+  text-decoration: none;
+  color: #6070ff;
+}
+ button.modal-btn.github a.githubLink{
+  text-decoration: none;
+  color: #6070ff;
+}
 
   .left-block-desktop {
     display: flex;
