--- a/css/style.css
+++ b/css/style.css
@@ -1005,6 +1005,16 @@ ul.project__lang {
   filter: blur(5px);
 }
 
+button.modal-btn.external a.externalLink {
+  text-decoration: none;
+  color: #6070ff;
+}
+
+button.modal-btn.github a.githubLink {
+  text-decoration: none;
+  color: #6070ff;
+}
+
 @media screen and (min-width: 768px) {
   header {
     padding: 16px 143px;
